[package]
name = "network"
version = "0.1.0"
edition = "2021"

[lib]
name = "network"
path = "src/lib.rs"

[[bin]]
name = "network"
path = "src/bin.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
compact_str = "0.7.1"
flate2 = "1.0.26"
quick-xml = "0.29.0"
rand = "0.8.5"
thiserror = "1.0.43"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "link_length_benchmarks"
harness = false
